compiler/ns.output
Estado 37 conflitos: 2 de deslocamento/redução
Estado 49 conflitos: 10 de deslocamento/redução
Estado 179 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 programa: programa declaracao
    2         | declaracao

    3 declaracao: decVar
    4           | decSub

    5 decVar: T_VAR listaSpecVars ":" tipo ";"

    6 tipo: T_BOOL
    7     | T_INT
    8     | T_STRING
    9     | T_STRING "[" T_NUM "]"

   10 listaSpecVars: %empty
   11              | listaSpecVars "," specVar
   12              | specVar

   13 specVar: T_ID
   14        | T_ID "=" valor
   15        | T_ID "[" T_NUM "]"
   16        | T_ID "[" T_NUM "]" "=" "{" decArran "}"

   17 decArran: decArran "," valor
   18         | valor

   19 valor: T_TRUE
   20      | T_FALSE
   21      | T_LIT_STRING
   22      | T_NUM

   23 decSub: decProc
   24       | decFun

   25 decProc: T_DEF T_ID "(" listaParametros ")" bloco
   26        | T_DEF T_ID "(" ")" bloco

   27 decFun: T_DEF T_ID "(" listaParametros ")" ":" tipo bloco
   28       | T_DEF T_ID "(" ")" ":" tipo bloco

   29 listaParametros: listaParametros ";" specParams
   30                | specParams

   31 specParams: specParamsN ":" tipo

   32 specParamsN: specParamsN "," param
   33            | param

   34 param: T_ID
   35      | T_ID "[" "]"

   36 comando: cmdSimples
   37        | bloco

   38 cmdSimples: cmdAtrib
   39           | cmdIf
   40           | cmdWhile
   41           | cmdFor
   42           | cmdStop
   43           | cmdSkip
   44           | cmdReturn
   45           | cmdChamadaProc
   46           | cmdRead
   47           | cmdWrite

   48 cmdAtrib: variavel tiposAtrib expressao ";"

   49 tiposAtrib: atribAgreg
   50           | "="

   51 atribAgreg: "/="
   52           | "%="
   53           | "*="
   54           | "+="
   55           | "-="

   56 cmdIf: T_IF "(" expressao ")" comando cmdElse

   57 cmdElse: %empty
   58        | T_ELSE comando

   59 cmdWhile: T_WHILE "(" expressao ")" comando

   60 cmdFor: T_FOR "(" atrib-ini ";" expressao ";" atrib-passo ")" comando

   61 atrib-ini: T_ID "=" T_NUM

   62 atrib-passo: T_ID atribAgreg T_NUM

   63 cmdStop: T_STOP ";"

   64 cmdSkip: T_SKIP ";"

   65 cmdReturn: T_RETURN ";"
   66          | T_RETURN expressao ";"

   67 cmdChamadaProc: T_ID "(" atribProc ")" ";"

   68 atribProc: %empty
   69          | cnjExpr

   70 cnjExpr: cnjExpr "," expressao
   71        | expressao

   72 cmdRead: T_READ variavel ";"

   73 cmdWrite: T_WRITE cnjExpr ";"

   74 bloco: "{" declaracoes comandos "}"

   75 declaracoes: %empty
   76            | declaracoes declaracao
   77            | declaracao

   78 comandos: %empty
   79         | comandos comando
   80         | comando

   81 opTern: expressao "?" expressao ":" expressao

   82 expressao: tipoExpressao
   83          | "(" expressao ")"
   84          | "-" expressao
   85          | "!" expressao
   86          | expressao "*" expressao
   87          | expressao "/" expressao
   88          | expressao "%" expressao
   89          | expressao "+" expressao
   90          | expressao "-" expressao
   91          | expressao "<" expressao
   92          | expressao "<=" expressao
   93          | expressao ">" expressao
   94          | expressao ">=" expressao
   95          | expressao "==" expressao
   96          | expressao "!=" expressao
   97          | expressao "&&" expressao
   98          | expressao "||" expressao
   99          | opTern

  100 tipoExpressao: valor
  101              | variavel
  102              | T_ID "(" atribProc ")"

  103 variavel: T_ID
  104         | T_ID "[" expressao "]"


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_BOOL (258) 6
T_INT (259) 7
T_STRING (260) 8 9
T_IF (261) 56
T_ELSE (262) 58
T_FOR (263) 60
T_WHILE (264) 59
T_WRITE (265) 73
T_READ (266) 72
T_DEF (267) 25 26 27 28
T_RETURN (268) 65 66
T_VAR (269) 5
T_SKIP (270) 64
T_STOP (271) 63
T_TRUE (272) 19
T_FALSE (273) 20
"(" (274) 25 26 27 28 56 59 60 67 83 102
")" (275) 25 26 27 28 56 59 60 67 83 102
"[" (276) 9 15 16 35 104
"]" (277) 9 15 16 35 104
"{" (278) 16 74
"}" (279) 16 74
"," (280) 11 17 32 70
";" (281) 5 29 48 60 63 64 65 66 67 72 73
"+" (282) 89
"-" (283) 84 90
"*" (284) 86
"/" (285) 87
"%" (286) 88
"==" (287) 95
"!=" (288) 96
">" (289) 93
">=" (290) 94
"<" (291) 91
"<=" (292) 92
"||" (293) 98
"&&" (294) 97
"!" (295) 85
"=" (296) 14 16 50 61
"+=" (297) 54
"-=" (298) 55
"*=" (299) 53
"/=" (300) 51
"%=" (301) 52
"?" (302) 81
":" (303) 5 27 28 31 81
T_ID (304) 13 14 15 16 25 26 27 28 34 35 61 62 67 102 103 104
T_NUM (305) 9 15 16 22 61 62
T_LIT_STRING (306) 21
T_NEG_UNAR (307)


Não terminais com as regras onde eles aparecem

$accept (53)
    à esquerda: 0
programa (54)
    à esquerda: 1 2, à direita: 0 1
declaracao (55)
    à esquerda: 3 4, à direita: 1 2 76 77
decVar (56)
    à esquerda: 5, à direita: 3
tipo (57)
    à esquerda: 6 7 8 9, à direita: 5 27 28 31
listaSpecVars (58)
    à esquerda: 10 11 12, à direita: 5 11
specVar (59)
    à esquerda: 13 14 15 16, à direita: 11 12
decArran (60)
    à esquerda: 17 18, à direita: 16 17
valor (61)
    à esquerda: 19 20 21 22, à direita: 14 17 18 100
decSub (62)
    à esquerda: 23 24, à direita: 4
decProc (63)
    à esquerda: 25 26, à direita: 23
decFun (64)
    à esquerda: 27 28, à direita: 24
listaParametros (65)
    à esquerda: 29 30, à direita: 25 27 29
specParams (66)
    à esquerda: 31, à direita: 29 30
specParamsN (67)
    à esquerda: 32 33, à direita: 31 32
param (68)
    à esquerda: 34 35, à direita: 32 33
comando (69)
    à esquerda: 36 37, à direita: 56 58 59 60 79 80
cmdSimples (70)
    à esquerda: 38 39 40 41 42 43 44 45 46 47, à direita: 36
cmdAtrib (71)
    à esquerda: 48, à direita: 38
tiposAtrib (72)
    à esquerda: 49 50, à direita: 48
atribAgreg (73)
    à esquerda: 51 52 53 54 55, à direita: 49 62
cmdIf (74)
    à esquerda: 56, à direita: 39
cmdElse (75)
    à esquerda: 57 58, à direita: 56
cmdWhile (76)
    à esquerda: 59, à direita: 40
cmdFor (77)
    à esquerda: 60, à direita: 41
atrib-ini (78)
    à esquerda: 61, à direita: 60
atrib-passo (79)
    à esquerda: 62, à direita: 60
cmdStop (80)
    à esquerda: 63, à direita: 42
cmdSkip (81)
    à esquerda: 64, à direita: 43
cmdReturn (82)
    à esquerda: 65 66, à direita: 44
cmdChamadaProc (83)
    à esquerda: 67, à direita: 45
atribProc (84)
    à esquerda: 68 69, à direita: 67 102
cnjExpr (85)
    à esquerda: 70 71, à direita: 69 70 73
cmdRead (86)
    à esquerda: 72, à direita: 46
cmdWrite (87)
    à esquerda: 73, à direita: 47
bloco (88)
    à esquerda: 74, à direita: 25 26 27 28 37
declaracoes (89)
    à esquerda: 75 76 77, à direita: 74 76
comandos (90)
    à esquerda: 78 79 80, à direita: 74 79
opTern (91)
    à esquerda: 81, à direita: 99
expressao (92)
    à esquerda: 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
    99, à direita: 48 56 59 60 66 70 71 81 83 84 85 86 87 88 89 90
    91 92 93 94 95 96 97 98 104
tipoExpressao (93)
    à esquerda: 100 101 102, à direita: 82
variavel (94)
    à esquerda: 103 104, à direita: 48 72 101


Estado 0

    0 $accept: . programa $end

    T_DEF  deslocar, e ir ao estado 1
    T_VAR  deslocar, e ir ao estado 2

    programa    ir ao estado 3
    declaracao  ir ao estado 4
    decVar      ir ao estado 5
    decSub      ir ao estado 6
    decProc     ir ao estado 7
    decFun      ir ao estado 8


Estado 1

   25 decProc: T_DEF . T_ID "(" listaParametros ")" bloco
   26        | T_DEF . T_ID "(" ")" bloco
   27 decFun: T_DEF . T_ID "(" listaParametros ")" ":" tipo bloco
   28       | T_DEF . T_ID "(" ")" ":" tipo bloco

    T_ID  deslocar, e ir ao estado 9


Estado 2

    5 decVar: T_VAR . listaSpecVars ":" tipo ";"

    T_ID  deslocar, e ir ao estado 10

    $padrão  reduzir usando a regra 10 (listaSpecVars)

    listaSpecVars  ir ao estado 11
    specVar        ir ao estado 12


Estado 3

    0 $accept: programa . $end
    1 programa: programa . declaracao

    $end   deslocar, e ir ao estado 13
    T_DEF  deslocar, e ir ao estado 1
    T_VAR  deslocar, e ir ao estado 2

    declaracao  ir ao estado 14
    decVar      ir ao estado 5
    decSub      ir ao estado 6
    decProc     ir ao estado 7
    decFun      ir ao estado 8


Estado 4

    2 programa: declaracao .

    $padrão  reduzir usando a regra 2 (programa)


Estado 5

    3 declaracao: decVar .

    $padrão  reduzir usando a regra 3 (declaracao)


Estado 6

    4 declaracao: decSub .

    $padrão  reduzir usando a regra 4 (declaracao)


Estado 7

   23 decSub: decProc .

    $padrão  reduzir usando a regra 23 (decSub)


Estado 8

   24 decSub: decFun .

    $padrão  reduzir usando a regra 24 (decSub)


Estado 9

   25 decProc: T_DEF T_ID . "(" listaParametros ")" bloco
   26        | T_DEF T_ID . "(" ")" bloco
   27 decFun: T_DEF T_ID . "(" listaParametros ")" ":" tipo bloco
   28       | T_DEF T_ID . "(" ")" ":" tipo bloco

    "("  deslocar, e ir ao estado 15


Estado 10

   13 specVar: T_ID .
   14        | T_ID . "=" valor
   15        | T_ID . "[" T_NUM "]"
   16        | T_ID . "[" T_NUM "]" "=" "{" decArran "}"

    "["  deslocar, e ir ao estado 16
    "="  deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 13 (specVar)


Estado 11

    5 decVar: T_VAR listaSpecVars . ":" tipo ";"
   11 listaSpecVars: listaSpecVars . "," specVar

    ","  deslocar, e ir ao estado 18
    ":"  deslocar, e ir ao estado 19


Estado 12

   12 listaSpecVars: specVar .

    $padrão  reduzir usando a regra 12 (listaSpecVars)


Estado 13

    0 $accept: programa $end .

    $padrão  aceitar


Estado 14

    1 programa: programa declaracao .

    $padrão  reduzir usando a regra 1 (programa)


Estado 15

   25 decProc: T_DEF T_ID "(" . listaParametros ")" bloco
   26        | T_DEF T_ID "(" . ")" bloco
   27 decFun: T_DEF T_ID "(" . listaParametros ")" ":" tipo bloco
   28       | T_DEF T_ID "(" . ")" ":" tipo bloco

    ")"   deslocar, e ir ao estado 20
    T_ID  deslocar, e ir ao estado 21

    listaParametros  ir ao estado 22
    specParams       ir ao estado 23
    specParamsN      ir ao estado 24
    param            ir ao estado 25


Estado 16

   15 specVar: T_ID "[" . T_NUM "]"
   16        | T_ID "[" . T_NUM "]" "=" "{" decArran "}"

    T_NUM  deslocar, e ir ao estado 26


Estado 17

   14 specVar: T_ID "=" . valor

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    T_NUM         deslocar, e ir ao estado 29
    T_LIT_STRING  deslocar, e ir ao estado 30

    valor  ir ao estado 31


Estado 18

   11 listaSpecVars: listaSpecVars "," . specVar

    T_ID  deslocar, e ir ao estado 10

    specVar  ir ao estado 32


Estado 19

    5 decVar: T_VAR listaSpecVars ":" . tipo ";"

    T_BOOL    deslocar, e ir ao estado 33
    T_INT     deslocar, e ir ao estado 34
    T_STRING  deslocar, e ir ao estado 35

    tipo  ir ao estado 36


Estado 20

   26 decProc: T_DEF T_ID "(" ")" . bloco
   28 decFun: T_DEF T_ID "(" ")" . ":" tipo bloco

    "{"  deslocar, e ir ao estado 37
    ":"  deslocar, e ir ao estado 38

    bloco  ir ao estado 39


Estado 21

   34 param: T_ID .
   35      | T_ID . "[" "]"

    "["  deslocar, e ir ao estado 40

    $padrão  reduzir usando a regra 34 (param)


Estado 22

   25 decProc: T_DEF T_ID "(" listaParametros . ")" bloco
   27 decFun: T_DEF T_ID "(" listaParametros . ")" ":" tipo bloco
   29 listaParametros: listaParametros . ";" specParams

    ")"  deslocar, e ir ao estado 41
    ";"  deslocar, e ir ao estado 42


Estado 23

   30 listaParametros: specParams .

    $padrão  reduzir usando a regra 30 (listaParametros)


Estado 24

   31 specParams: specParamsN . ":" tipo
   32 specParamsN: specParamsN . "," param

    ","  deslocar, e ir ao estado 43
    ":"  deslocar, e ir ao estado 44


Estado 25

   33 specParamsN: param .

    $padrão  reduzir usando a regra 33 (specParamsN)


Estado 26

   15 specVar: T_ID "[" T_NUM . "]"
   16        | T_ID "[" T_NUM . "]" "=" "{" decArran "}"

    "]"  deslocar, e ir ao estado 45


Estado 27

   19 valor: T_TRUE .

    $padrão  reduzir usando a regra 19 (valor)


Estado 28

   20 valor: T_FALSE .

    $padrão  reduzir usando a regra 20 (valor)


Estado 29

   22 valor: T_NUM .

    $padrão  reduzir usando a regra 22 (valor)


Estado 30

   21 valor: T_LIT_STRING .

    $padrão  reduzir usando a regra 21 (valor)


Estado 31

   14 specVar: T_ID "=" valor .

    $padrão  reduzir usando a regra 14 (specVar)


Estado 32

   11 listaSpecVars: listaSpecVars "," specVar .

    $padrão  reduzir usando a regra 11 (listaSpecVars)


Estado 33

    6 tipo: T_BOOL .

    $padrão  reduzir usando a regra 6 (tipo)


Estado 34

    7 tipo: T_INT .

    $padrão  reduzir usando a regra 7 (tipo)


Estado 35

    8 tipo: T_STRING .
    9     | T_STRING . "[" T_NUM "]"

    "["  deslocar, e ir ao estado 46

    $padrão  reduzir usando a regra 8 (tipo)


Estado 36

    5 decVar: T_VAR listaSpecVars ":" tipo . ";"

    ";"  deslocar, e ir ao estado 47


Estado 37

   74 bloco: "{" . declaracoes comandos "}"

    T_DEF  deslocar, e ir ao estado 1
    T_VAR  deslocar, e ir ao estado 2

    T_DEF     [reduzir usando a regra 75 (declaracoes)]
    T_VAR     [reduzir usando a regra 75 (declaracoes)]
    $padrão  reduzir usando a regra 75 (declaracoes)

    declaracao   ir ao estado 48
    decVar       ir ao estado 5
    decSub       ir ao estado 6
    decProc      ir ao estado 7
    decFun       ir ao estado 8
    declaracoes  ir ao estado 49


Estado 38

   28 decFun: T_DEF T_ID "(" ")" ":" . tipo bloco

    T_BOOL    deslocar, e ir ao estado 33
    T_INT     deslocar, e ir ao estado 34
    T_STRING  deslocar, e ir ao estado 35

    tipo  ir ao estado 50


Estado 39

   26 decProc: T_DEF T_ID "(" ")" bloco .

    $padrão  reduzir usando a regra 26 (decProc)


Estado 40

   35 param: T_ID "[" . "]"

    "]"  deslocar, e ir ao estado 51


Estado 41

   25 decProc: T_DEF T_ID "(" listaParametros ")" . bloco
   27 decFun: T_DEF T_ID "(" listaParametros ")" . ":" tipo bloco

    "{"  deslocar, e ir ao estado 37
    ":"  deslocar, e ir ao estado 52

    bloco  ir ao estado 53


Estado 42

   29 listaParametros: listaParametros ";" . specParams

    T_ID  deslocar, e ir ao estado 21

    specParams   ir ao estado 54
    specParamsN  ir ao estado 24
    param        ir ao estado 25


Estado 43

   32 specParamsN: specParamsN "," . param

    T_ID  deslocar, e ir ao estado 21

    param  ir ao estado 55


Estado 44

   31 specParams: specParamsN ":" . tipo

    T_BOOL    deslocar, e ir ao estado 33
    T_INT     deslocar, e ir ao estado 34
    T_STRING  deslocar, e ir ao estado 35

    tipo  ir ao estado 56


Estado 45

   15 specVar: T_ID "[" T_NUM "]" .
   16        | T_ID "[" T_NUM "]" . "=" "{" decArran "}"

    "="  deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 15 (specVar)


Estado 46

    9 tipo: T_STRING "[" . T_NUM "]"

    T_NUM  deslocar, e ir ao estado 58


Estado 47

    5 decVar: T_VAR listaSpecVars ":" tipo ";" .

    $padrão  reduzir usando a regra 5 (decVar)


Estado 48

   77 declaracoes: declaracao .

    $padrão  reduzir usando a regra 77 (declaracoes)


Estado 49

   74 bloco: "{" declaracoes . comandos "}"
   76 declaracoes: declaracoes . declaracao

    T_IF      deslocar, e ir ao estado 59
    T_FOR     deslocar, e ir ao estado 60
    T_WHILE   deslocar, e ir ao estado 61
    T_WRITE   deslocar, e ir ao estado 62
    T_READ    deslocar, e ir ao estado 63
    T_DEF     deslocar, e ir ao estado 1
    T_RETURN  deslocar, e ir ao estado 64
    T_VAR     deslocar, e ir ao estado 2
    T_SKIP    deslocar, e ir ao estado 65
    T_STOP    deslocar, e ir ao estado 66
    "{"       deslocar, e ir ao estado 37
    T_ID      deslocar, e ir ao estado 67

    T_IF      [reduzir usando a regra 78 (comandos)]
    T_FOR     [reduzir usando a regra 78 (comandos)]
    T_WHILE   [reduzir usando a regra 78 (comandos)]
    T_WRITE   [reduzir usando a regra 78 (comandos)]
    T_READ    [reduzir usando a regra 78 (comandos)]
    T_RETURN  [reduzir usando a regra 78 (comandos)]
    T_SKIP    [reduzir usando a regra 78 (comandos)]
    T_STOP    [reduzir usando a regra 78 (comandos)]
    "{"       [reduzir usando a regra 78 (comandos)]
    T_ID      [reduzir usando a regra 78 (comandos)]
    $padrão  reduzir usando a regra 78 (comandos)

    declaracao      ir ao estado 68
    decVar          ir ao estado 5
    decSub          ir ao estado 6
    decProc         ir ao estado 7
    decFun          ir ao estado 8
    comando         ir ao estado 69
    cmdSimples      ir ao estado 70
    cmdAtrib        ir ao estado 71
    cmdIf           ir ao estado 72
    cmdWhile        ir ao estado 73
    cmdFor          ir ao estado 74
    cmdStop         ir ao estado 75
    cmdSkip         ir ao estado 76
    cmdReturn       ir ao estado 77
    cmdChamadaProc  ir ao estado 78
    cmdRead         ir ao estado 79
    cmdWrite        ir ao estado 80
    bloco           ir ao estado 81
    comandos        ir ao estado 82
    variavel        ir ao estado 83


Estado 50

   28 decFun: T_DEF T_ID "(" ")" ":" tipo . bloco

    "{"  deslocar, e ir ao estado 37

    bloco  ir ao estado 84


Estado 51

   35 param: T_ID "[" "]" .

    $padrão  reduzir usando a regra 35 (param)


Estado 52

   27 decFun: T_DEF T_ID "(" listaParametros ")" ":" . tipo bloco

    T_BOOL    deslocar, e ir ao estado 33
    T_INT     deslocar, e ir ao estado 34
    T_STRING  deslocar, e ir ao estado 35

    tipo  ir ao estado 85


Estado 53

   25 decProc: T_DEF T_ID "(" listaParametros ")" bloco .

    $padrão  reduzir usando a regra 25 (decProc)


Estado 54

   29 listaParametros: listaParametros ";" specParams .

    $padrão  reduzir usando a regra 29 (listaParametros)


Estado 55

   32 specParamsN: specParamsN "," param .

    $padrão  reduzir usando a regra 32 (specParamsN)


Estado 56

   31 specParams: specParamsN ":" tipo .

    $padrão  reduzir usando a regra 31 (specParams)


Estado 57

   16 specVar: T_ID "[" T_NUM "]" "=" . "{" decArran "}"

    "{"  deslocar, e ir ao estado 86


Estado 58

    9 tipo: T_STRING "[" T_NUM . "]"

    "]"  deslocar, e ir ao estado 87


Estado 59

   56 cmdIf: T_IF . "(" expressao ")" comando cmdElse

    "("  deslocar, e ir ao estado 88


Estado 60

   60 cmdFor: T_FOR . "(" atrib-ini ";" expressao ";" atrib-passo ")" comando

    "("  deslocar, e ir ao estado 89


Estado 61

   59 cmdWhile: T_WHILE . "(" expressao ")" comando

    "("  deslocar, e ir ao estado 90


Estado 62

   73 cmdWrite: T_WRITE . cnjExpr ";"

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 91
    "-"           deslocar, e ir ao estado 92
    "!"           deslocar, e ir ao estado 93
    T_ID          deslocar, e ir ao estado 94
    T_NUM         deslocar, e ir ao estado 29
    T_LIT_STRING  deslocar, e ir ao estado 30

    valor          ir ao estado 95
    cnjExpr        ir ao estado 96
    opTern         ir ao estado 97
    expressao      ir ao estado 98
    tipoExpressao  ir ao estado 99
    variavel       ir ao estado 100


Estado 63

   72 cmdRead: T_READ . variavel ";"

    T_ID  deslocar, e ir ao estado 101

    variavel  ir ao estado 102


Estado 64

   65 cmdReturn: T_RETURN . ";"
   66          | T_RETURN . expressao ";"

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 91
    ";"           deslocar, e ir ao estado 103
    "-"           deslocar, e ir ao estado 92
    "!"           deslocar, e ir ao estado 93
    T_ID          deslocar, e ir ao estado 94
    T_NUM         deslocar, e ir ao estado 29
    T_LIT_STRING  deslocar, e ir ao estado 30

    valor          ir ao estado 95
    opTern         ir ao estado 97
    expressao      ir ao estado 104
    tipoExpressao  ir ao estado 99
    variavel       ir ao estado 100


Estado 65

   64 cmdSkip: T_SKIP . ";"

    ";"  deslocar, e ir ao estado 105


Estado 66

   63 cmdStop: T_STOP . ";"

    ";"  deslocar, e ir ao estado 106


Estado 67

   67 cmdChamadaProc: T_ID . "(" atribProc ")" ";"
  103 variavel: T_ID .
  104         | T_ID . "[" expressao "]"

    "("  deslocar, e ir ao estado 107
    "["  deslocar, e ir ao estado 108

    $padrão  reduzir usando a regra 103 (variavel)


Estado 68

   76 declaracoes: declaracoes declaracao .

    $padrão  reduzir usando a regra 76 (declaracoes)


Estado 69

   80 comandos: comando .

    $padrão  reduzir usando a regra 80 (comandos)


Estado 70

   36 comando: cmdSimples .

    $padrão  reduzir usando a regra 36 (comando)


Estado 71

   38 cmdSimples: cmdAtrib .

    $padrão  reduzir usando a regra 38 (cmdSimples)


Estado 72

   39 cmdSimples: cmdIf .

    $padrão  reduzir usando a regra 39 (cmdSimples)


Estado 73

   40 cmdSimples: cmdWhile .

    $padrão  reduzir usando a regra 40 (cmdSimples)


Estado 74

   41 cmdSimples: cmdFor .

    $padrão  reduzir usando a regra 41 (cmdSimples)


Estado 75

   42 cmdSimples: cmdStop .

    $padrão  reduzir usando a regra 42 (cmdSimples)


Estado 76

   43 cmdSimples: cmdSkip .

    $padrão  reduzir usando a regra 43 (cmdSimples)


Estado 77

   44 cmdSimples: cmdReturn .

    $padrão  reduzir usando a regra 44 (cmdSimples)


Estado 78

   45 cmdSimples: cmdChamadaProc .

    $padrão  reduzir usando a regra 45 (cmdSimples)


Estado 79

   46 cmdSimples: cmdRead .

    $padrão  reduzir usando a regra 46 (cmdSimples)


Estado 80

   47 cmdSimples: cmdWrite .

    $padrão  reduzir usando a regra 47 (cmdSimples)


Estado 81

   37 comando: bloco .

    $padrão  reduzir usando a regra 37 (comando)


Estado 82

   74 bloco: "{" declaracoes comandos . "}"
   79 comandos: comandos . comando

    T_IF      deslocar, e ir ao estado 59
    T_FOR     deslocar, e ir ao estado 60
    T_WHILE   deslocar, e ir ao estado 61
    T_WRITE   deslocar, e ir ao estado 62
    T_READ    deslocar, e ir ao estado 63
    T_RETURN  deslocar, e ir ao estado 64
    T_SKIP    deslocar, e ir ao estado 65
    T_STOP    deslocar, e ir ao estado 66
    "{"       deslocar, e ir ao estado 37
    "}"       deslocar, e ir ao estado 109
    T_ID      deslocar, e ir ao estado 67

    comando         ir ao estado 110
    cmdSimples      ir ao estado 70
    cmdAtrib        ir ao estado 71
    cmdIf           ir ao estado 72
    cmdWhile        ir ao estado 73
    cmdFor          ir ao estado 74
    cmdStop         ir ao estado 75
    cmdSkip         ir ao estado 76
    cmdReturn       ir ao estado 77
    cmdChamadaProc  ir ao estado 78
    cmdRead         ir ao estado 79
    cmdWrite        ir ao estado 80
    bloco           ir ao estado 81
    variavel        ir ao estado 83


Estado 83

   48 cmdAtrib: variavel . tiposAtrib expressao ";"

    "="   deslocar, e ir ao estado 111
    "+="  deslocar, e ir ao estado 112
    "-="  deslocar, e ir ao estado 113
    "*="  deslocar, e ir ao estado 114
    "/="  deslocar, e ir ao estado 115
    "%="  deslocar, e ir ao estado 116

    tiposAtrib  ir ao estado 117
    atribAgreg  ir ao estado 118


Estado 84

   28 decFun: T_DEF T_ID "(" ")" ":" tipo bloco .

    $padrão  reduzir usando a regra 28 (decFun)


Estado 85

   27 decFun: T_DEF T_ID "(" listaParametros ")" ":" tipo . bloco

    "{"  deslocar, e ir ao estado 37

    bloco  ir ao estado 119


Estado 86

   16 specVar: T_ID "[" T_NUM "]" "=" "{" . decArran "}"

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    T_NUM         deslocar, e ir ao estado 29
    T_LIT_STRING  deslocar, e ir ao estado 30

    decArran  ir ao estado 120
    valor     ir ao estado 121


Estado 87

    9 tipo: T_STRING "[" T_NUM "]" .

    $padrão  reduzir usando a regra 9 (tipo)


Estado 88

   56 cmdIf: T_IF "(" . expressao ")" comando cmdElse

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 91
    "-"           deslocar, e ir ao estado 92
    "!"           deslocar, e ir ao estado 93
    T_ID          deslocar, e ir ao estado 94
    T_NUM         deslocar, e ir ao estado 29
    T_LIT_STRING  deslocar, e ir ao estado 30

    valor          ir ao estado 95
    opTern         ir ao estado 97
    expressao      ir ao estado 122
    tipoExpressao  ir ao estado 99
    variavel       ir ao estado 100


Estado 89

   60 cmdFor: T_FOR "(" . atrib-ini ";" expressao ";" atrib-passo ")" comando

    T_ID  deslocar, e ir ao estado 123

    atrib-ini  ir ao estado 124


Estado 90

   59 cmdWhile: T_WHILE "(" . expressao ")" comando

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 91
    "-"           deslocar, e ir ao estado 92
    "!"           deslocar, e ir ao estado 93
    T_ID          deslocar, e ir ao estado 94
    T_NUM         deslocar, e ir ao estado 29
    T_LIT_STRING  deslocar, e ir ao estado 30

    valor          ir ao estado 95
    opTern         ir ao estado 97
    expressao      ir ao estado 125
    tipoExpressao  ir ao estado 99
    variavel       ir ao estado 100


Estado 91

   83 expressao: "(" . expressao ")"

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 91
    "-"           deslocar, e ir ao estado 92
    "!"           deslocar, e ir ao estado 93
    T_ID          deslocar, e ir ao estado 94
    T_NUM         deslocar, e ir ao estado 29
    T_LIT_STRING  deslocar, e ir ao estado 30

    valor          ir ao estado 95
    opTern         ir ao estado 97
    expressao      ir ao estado 126
    tipoExpressao  ir ao estado 99
    variavel       ir ao estado 100


Estado 92

   84 expressao: "-" . expressao

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 91
    "-"           deslocar, e ir ao estado 92
    "!"           deslocar, e ir ao estado 93
    T_ID          deslocar, e ir ao estado 94
    T_NUM         deslocar, e ir ao estado 29
    T_LIT_STRING  deslocar, e ir ao estado 30

    valor          ir ao estado 95
    opTern         ir ao estado 97
    expressao      ir ao estado 127
    tipoExpressao  ir ao estado 99
    variavel       ir ao estado 100


Estado 93

   85 expressao: "!" . expressao

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 91
    "-"           deslocar, e ir ao estado 92
    "!"           deslocar, e ir ao estado 93
    T_ID          deslocar, e ir ao estado 94
    T_NUM         deslocar, e ir ao estado 29
    T_LIT_STRING  deslocar, e ir ao estado 30

    valor          ir ao estado 95
    opTern         ir ao estado 97
    expressao      ir ao estado 128
    tipoExpressao  ir ao estado 99
    variavel       ir ao estado 100


Estado 94

  102 tipoExpressao: T_ID . "(" atribProc ")"
  103 variavel: T_ID .
  104         | T_ID . "[" expressao "]"

    "("  deslocar, e ir ao estado 129
    "["  deslocar, e ir ao estado 108

    $padrão  reduzir usando a regra 103 (variavel)


Estado 95

  100 tipoExpressao: valor .

    $padrão  reduzir usando a regra 100 (tipoExpressao)


Estado 96

   70 cnjExpr: cnjExpr . "," expressao
   73 cmdWrite: T_WRITE cnjExpr . ";"

    ","  deslocar, e ir ao estado 130
    ";"  deslocar, e ir ao estado 131


Estado 97

   99 expressao: opTern .

    $padrão  reduzir usando a regra 99 (expressao)


Estado 98

   71 cnjExpr: expressao .
   81 opTern: expressao . "?" expressao ":" expressao
   86 expressao: expressao . "*" expressao
   87          | expressao . "/" expressao
   88          | expressao . "%" expressao
   89          | expressao . "+" expressao
   90          | expressao . "-" expressao
   91          | expressao . "<" expressao
   92          | expressao . "<=" expressao
   93          | expressao . ">" expressao
   94          | expressao . ">=" expressao
   95          | expressao . "==" expressao
   96          | expressao . "!=" expressao
   97          | expressao . "&&" expressao
   98          | expressao . "||" expressao

    "+"   deslocar, e ir ao estado 132
    "-"   deslocar, e ir ao estado 133
    "*"   deslocar, e ir ao estado 134
    "/"   deslocar, e ir ao estado 135
    "%"   deslocar, e ir ao estado 136
    "=="  deslocar, e ir ao estado 137
    "!="  deslocar, e ir ao estado 138
    ">"   deslocar, e ir ao estado 139
    ">="  deslocar, e ir ao estado 140
    "<"   deslocar, e ir ao estado 141
    "<="  deslocar, e ir ao estado 142
    "||"  deslocar, e ir ao estado 143
    "&&"  deslocar, e ir ao estado 144
    "?"   deslocar, e ir ao estado 145

    $padrão  reduzir usando a regra 71 (cnjExpr)


Estado 99

   82 expressao: tipoExpressao .

    $padrão  reduzir usando a regra 82 (expressao)


Estado 100

  101 tipoExpressao: variavel .

    $padrão  reduzir usando a regra 101 (tipoExpressao)


Estado 101

  103 variavel: T_ID .
  104         | T_ID . "[" expressao "]"

    "["  deslocar, e ir ao estado 108

    $padrão  reduzir usando a regra 103 (variavel)


Estado 102

   72 cmdRead: T_READ variavel . ";"

    ";"  deslocar, e ir ao estado 146


Estado 103

   65 cmdReturn: T_RETURN ";" .

    $padrão  reduzir usando a regra 65 (cmdReturn)

